--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 *.iml
 .gradle
 /local.properties
-/.idea/libraries
-/.idea/modules.xml
 /.idea/workspace.xml
+/.idea/libraries
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+.idea
+vendor/
+.bundle
+/.gradle-cache
+/.keystores
+*.jks
