--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.61'
+    ext {
+        kotlin_version = '1.2.61'
+        roomVersion = '1.0.0-alpha4'
+    }
     repositories {
         google()
         jcenter()
