--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_api_key" />
 
-        <activity android:name=".librarysong.ListMusicActivity">
+        <activity android:name=".ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,7 +38,7 @@
         </activity>
         <activity android:name=".ui.ProfileUserActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".librarysong.ListMusicActivity" />
         <activity android:name=".ui.SignUpActivity" />
     </application>
 </manifest>
