--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         kotlin_version = '1.2.61'
-        roomVersion = '1.0.0-alpha4'
+        roomVersion = '1.1.1'
     }
     repositories {
         google()
