--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
@@ -22,7 +23,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_api_key" />
-        <activity android:name=".ui.LoginActivity">
+
+        <activity android:name=".librarysong.ListMusicActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,7 +32,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.ProfileUserActivity" />
-        <activity android:name=".librarysong.ListMusicActivity" />
         <activity android:name=".ui.SignUpActivity" />
+        <activity android:name=".ChoiceSongActivity"></activity>
     </application>
+
 </manifest>
