--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_api_key" />
 
-        <activity android:name=".ui.LoginActivity">
+        <activity android:name=".librarysong.ListMusicActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,8 +40,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.ProfileUserActivity" />
+        <activity android:name=".ui.LoginActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".librarysong.ListMusicActivity" />
         <activity android:name=".ui.SignUpActivity" />
         <activity android:name=".ui.ListAlbumActivity" />
 
