--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".ui.SearchedActivity"></activity>
+        <activity android:name=".ui.SearchedActivity"/>
     </application>
 
 </manifest>
