--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.61'
     ext {
         kotlin_version = '1.2.61'
-        roomVersion = '1.1.1'
+        firebase_version_3 = '16.0.3'
+        firebase_version_2 = '16.0.2'
+        room_version = '1.1.1'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:3.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.1.0'
         // NOTE: Do not place your application dependencies here; they belong
