--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,11 +47,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
 
     // firebase
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
-    implementation "com.google.firebase:firebase-database:$rootProject.firebase_version_2"
-    implementation "com.google.firebase:firebase-storage:$rootProject.firebase_version_2"
-    implementation "com.google.firebase:firebase-auth:$rootProject.firebase_version_3"
-    implementation "com.google.firebase:firebase-core:$rootProject.firebase_version_3"
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation "com.google.firebase:firebase-database:$rootProject.firebase_version_3"
+    implementation "com.google.firebase:firebase-storage:$rootProject.firebase_version_3"
+    implementation "com.google.firebase:firebase-auth:$rootProject.firebase_version_4"
+    implementation "com.google.firebase:firebase-core:$rootProject.firebase_version_4"
 
     // database
     implementation "android.arch.persistence.room:runtime:$rootProject.room_version"
@@ -61,6 +61,10 @@ dependencies {
     //unit test
     testImplementation 'org.mockito:mockito-core:2.21.0'
     testImplementation 'junit:junit:4.12'
+
+    //load image
+    implementation "com.github.bumptech.glide:glide:$rootProject.glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.glide_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
