--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ buildscript {
     ext {
         kotlin_version = '1.2.61'
         firebase_version_3 = '16.0.3'
-        firebase_version_2 = '16.0.2'
+        firebase_version_4 = '16.0.4'
+        glide_version="4.8.0"
         room_version = '1.1.1'
     }
     repositories {
