change list music toolbar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,6 @@
             android:value="@string/map_api_key" />
 
         <activity android:name=".ui.activity.ListMusicActivity">
-
-        </activity>
-        <activity android:name=".ui.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -39,20 +36,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.ProfileUserActivity" />
-        <activity android:name=".ui.activity.MainActivity" />
         <activity android:name=".ui.activity.SignUpActivity" />
         <activity android:name=".ui.activity.ChoiceSongActivity" />
         <activity android:name=".ui.activity.ListAlbumActivity" />
         <activity android:name=".ui.activity.ListSongInPlaylistActivity" />
         <activity android:name=".ui.activity.SearchedActivity" />
-        <activity android:name=".ui.activity.PlayMusicActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ui.activity.PlayMusicActivity" />
 
         <service
             android:name=".service.MusicService"
