--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_api_key" />
 
-        <activity android:name=".ui.activity.ListMusicActivity">
+        <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -39,10 +39,8 @@
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.ProfileUserActivity" />
         <activity android:name=".ui.activity.SignUpActivity" />
-        <activity android:name=".ui.activity.ChoiceSongActivity" />
         <activity android:name=".ui.activity.ListAlbumActivity" />
         <activity android:name=".ui.activity.ListSongInPlaylistActivity" />
-        <activity android:name=".ui.activity.SearchedActivity" />
         <activity android:name=".ui.activity.PlayMusicActivity" />
 
         <service
