--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,11 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "internship.asiantech.a2018summerfinal"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -31,27 +32,25 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    // support
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:27.1.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-v13:27.1.1'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
 
     // firebase
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
-    implementation "com.google.firebase:firebase-database:$rootProject.firebase_version_3"
-    implementation "com.google.firebase:firebase-storage:$rootProject.firebase_version_3"
-    implementation "com.google.firebase:firebase-auth:$rootProject.firebase_version_4"
-    implementation "com.google.firebase:firebase-core:$rootProject.firebase_version_4"
+    implementation "com.google.firebase:firebase-database:16.0.4"
+    implementation "com.google.firebase:firebase-storage:16.0.4"
+    implementation "com.google.firebase:firebase-auth:16.0.5"
+    implementation "com.google.firebase:firebase-core:16.0.4"
+
+    //map
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
 
     // database
     implementation "android.arch.persistence.room:runtime:$rootProject.room_version"
@@ -62,9 +61,19 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.21.0'
     testImplementation 'junit:junit:4.12'
 
+    //ui test
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     //load image
     implementation "com.github.bumptech.glide:glide:$rootProject.glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.glide_version"
+
+    // api
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
